# clipboard-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  clipboard-manager-implementation-plan.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
clipboard_manager/: config.py  models.py  storage.py  tray.py
clipboard_manager/popup/: row.py  search.py
debian/: changelog  clipboard-manager.postinst.debhelper  clipboard-manager.prerm.debhelper  control  files  install  postinst  prerm  rules
debian/clipboard-manager/DEBIAN/: control  md5sums  postinst  prerm
debian/clipboard-manager/usr/lib/python3/dist-packages/clipboard_manager/: __main__.py  app.py  autostart.py  watcher.py
debian/clipboard-manager/usr/lib/python3/dist-packages/clipboard_manager-1.0.0.dist-info/: METADATA  entry_points.txt
debian/clipboard-manager/usr/lib/python3/dist-packages/clipboard_manager/popup/: settings_dialog.py  window.py
debian/clipboard-manager/usr/lib/python3/dist-packages/clipboard_manager/utils/: hashing.py  logger.py
debian/clipboard-manager/usr/share/doc/clipboard-manager/: copyright
packaging/: clipboard-manager.desktop  clipboard-manager.service
tests/: test_storage.py
